Fix merge conflict

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,6 @@ pom.xml.releaseBackup
 release.properties
 /target
 
-<<<<<<< HEAD
 # IntelliJ IDEA config
 .idea/
-ets-wmts10.iml
-=======
-# IntelliJ Idea
-.idea/
-ets-wmts10.iml
->>>>>>> feature/remove-ets-1443
+*.iml
