--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
       </plugin>
       <plugin>     
         <artifactId>maven-site-plugin</artifactId>
+        <version>3.4</version>
         <configuration>
           <relativizeDecorationLinks>false</relativizeDecorationLinks>      
         </configuration>
