--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ets-wmts10</artifactId>
   <groupId>org.opengis.cite</groupId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
 
   <name>OGC Web Map Tile Service 1.0.0 - Executable Test Suite</name>
   <description>
@@ -23,7 +23,7 @@
   </organization>
   <scm>
     <url>https://github.com/opengeospatial/ets-wmts10</url>    <connection>scm:git:https://github.com/opengeospatial/ets-wmts10.git</connection>    <developerConnection>scm:git:git@github.com:opengeospatial/ets-wmts10.git</developerConnection>
-    <tag>1.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>GitHub Issue Tracker</system>
