--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
     <url>http://www.opengeospatial.org</url>
   </organization>
   <scm>
-    <url>https://github.com/opengeospatial/ets-wmts10</url>    <connection>scm:git:https://github.com/opengeospatial/ets-wmts10.git</connection>    <developerConnection>scm:git:git@github.com:opengeospatial/ets-wmts10.git</developerConnection>
+    <url>https://github.com/opengeospatial/ets-wmts10</url>
+    <connection>scm:git:https://github.com/opengeospatial/ets-wmts10.git</connection>
+    <developerConnection>scm:git:git@github.com:opengeospatial/ets-wmts10.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
   <issueManagement>
@@ -78,7 +80,6 @@
 
   <build>
     <plugins>  
-
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
         <executions>
@@ -111,11 +112,13 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
         <configuration>
           <autoVersionSubmodules>true</autoVersionSubmodules>
           <tagNameFormat>@{project.version}</tagNameFormat>
+          <releaseProfiles>release</releaseProfiles>
         </configuration>
       </plugin>
       <plugin>     
@@ -141,6 +144,56 @@
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-publish-plugin</artifactId>
+        <version>1.1</version>
+        <configuration>
+          <scmBranch>gh-pages</scmBranch>
+        </configuration>
+      </plugin>
     </plugins>   
   </build>
+
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <configuration>
+                  <!-- Enable if GPG 2.1+ is used -->
+                  <!--<gpgArguments>
+                    <arg>&#45;&#45;pinentry-mode</arg>
+                    <arg>loopback</arg>
+                  </gpgArguments>-->
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
+  <distributionManagement>
+    <repository>
+      <id>sonatype-nexus-staging</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <site>
+      <id>site</id>
+      <url>scm:git:git@github.com:opengeospatial/ets-wmts10.git</url>
+    </site>
+  </distributionManagement>
 </project>
