--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>ets-wmts10</artifactId>
   <groupId>org.opengis.cite</groupId>
   <version>1.3-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>OGC Web Map Tile Service 1.0.0 - Executable Test Suite</name>
   <description>
