--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
   <artifactId>ets-wmts10</artifactId>
   <groupId>org.opengis.cite</groupId>
   <version>1.3-SNAPSHOT</version>
-  <packaging>pom</packaging>
 
   <name>OGC Web Map Tile Service 1.0.0 - Executable Test Suite</name>
   <description>
@@ -59,6 +58,7 @@
     <ets-code>wmts</ets-code>
     <spec-version>1.0.0</spec-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
     <teamengine.version>4.10</teamengine.version>
   </properties>  
   <reporting>
@@ -101,25 +101,34 @@
       </plugin>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>default-jar</id>
-            <phase>never</phase>
-          </execution>
-        </executions>
+        <version>3.0.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+            <manifestEntries>
+              <Build-Host>${hostname}</Build-Host>
+              <Build-Time>${maven.build.timestamp}</Build-Time>
+              <Build-Revision>${buildNumber}</Build-Revision>
+            </manifestEntries>
+          </archive>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
         <configuration>
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
         <configuration>
           <archive>
             <manifest>
-              <mainClass>org.opengis.wmts10.CtlController</mainClass>
+              <mainClass>org.opengis.cite.wmts10.CtlController</mainClass>
             </manifest>
           </archive>
           <descriptors>
@@ -148,13 +157,13 @@
       </plugin>
       <plugin>     
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.4</version>
         <executions>
           <execution>
             <id>site-package</id>
             <phase>prepare-package</phase>
             <goals>
-              <goal>site</goal>
+              <goal>jar</goal>
             </goals>
           </execution>
         </executions>
@@ -162,7 +171,7 @@
           <dependency>
             <groupId>org.apache.maven.doxia</groupId>
             <artifactId>doxia-module-markdown</artifactId>
-            <version>1.7</version>
+            <version>1.6</version>
           </dependency>
         </dependencies>
       </plugin>
