--- a/pom.xml
+++ b/pom.xml
@@ -60,13 +60,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
     <teamengine.version>5.3</teamengine.version>
-    <soapui.teamengine.endpoint>http://cite.opengeospatial.org/te2</soapui.teamengine.endpoint>
-    <soapui.ets.version>1.3-SNAPSHOT</soapui.ets.version>
-    <soapui.iut>http://cite.deegree.org/deegree-webservices-3.4.0/services/wmts100?service=WMTS&amp;request=GetCapabilities</soapui.iut>
+    <soapui.teamengine.endpoint>http://localhost:8081/teamengine</soapui.teamengine.endpoint>
+    <soapui.ets.version>${project.version}</soapui.ets.version>
+    <soapui.iut>http://cite.deegree.org/deegree-webservices-3.4.5/services/wmts100?service=WMTS&amp;request=GetCapabilities</soapui.iut>
     <soapui.tests.passed>32</soapui.tests.passed>
     <soapui.tests.skipped>0</soapui.tests.skipped>
     <soapui.tests.failed>0</soapui.tests.failed>
-    <docker.teamengine.version>5.3</docker.teamengine.version>
+    <docker.teamengine.version>5.4-SNAPSHOT</docker.teamengine.version>
   </properties>  
   <reporting>
     <plugins>
