--- a/pom.xml
+++ b/pom.xml
@@ -59,14 +59,13 @@
     <spec-version>1.0.0</spec-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
-    <teamengine.version>5.3</teamengine.version>
+    <teamengine.version>5.4</teamengine.version>
     <soapui.teamengine.endpoint>http://localhost:8081/teamengine</soapui.teamengine.endpoint>
-    <soapui.ets.version>${project.version}</soapui.ets.version>
     <soapui.iut>http://cite.deegree.org/deegree-webservices-3.4.5/services/wmts100?service=WMTS&amp;request=GetCapabilities</soapui.iut>
     <soapui.tests.passed>32</soapui.tests.passed>
     <soapui.tests.skipped>0</soapui.tests.skipped>
     <soapui.tests.failed>0</soapui.tests.failed>
-    <docker.teamengine.version>5.4-SNAPSHOT</docker.teamengine.version>
+    <docker.teamengine.version>5.4</docker.teamengine.version>
   </properties>  
   <reporting>
     <plugins>
@@ -267,7 +266,7 @@
            <plugin>
             <groupId>com.smartbear.soapui</groupId>
             <artifactId>soapui-maven-plugin</artifactId>
-            <version>5.4.0</version>
+            <version>5.5.0</version>
             <dependencies>
               <dependency>
                 <groupId>com.jgoodies</groupId>
@@ -282,7 +281,6 @@
               <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
               <projectProperties>
                 <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
-                <value>ets.version=${soapui.ets.version}</value>
                 <value>iut=${soapui.iut}</value>
                 <value>tests.passed=${soapui.tests.passed}</value>
                 <value>tests.skipped=${soapui.tests.skipped}</value>
@@ -439,7 +437,7 @@
           <plugin>
             <groupId>com.smartbear.soapui</groupId>
             <artifactId>soapui-maven-plugin</artifactId>
-            <version>5.4.0</version>
+            <version>5.5.0</version>
             <dependencies>
               <dependency>
                 <groupId>com.jgoodies</groupId>
@@ -454,7 +452,6 @@
               <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
               <projectProperties>
                 <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
-                <value>ets.version=${soapui.ets.version}</value>
                 <value>iut=${soapui.iut}</value>
                 <value>tests.passed=${soapui.tests.passed}</value>
                 <value>tests.skipped=${soapui.tests.skipped}</value>
