--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,9 @@
       <plugin>     
         <artifactId>maven-site-plugin</artifactId>
         <version>3.4</version>
+        <configuration>
+          <skipDeploy>true</skipDeploy>
+        </configuration>
         <executions>
           <execution>
             <id>site-package</id>
