--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,8 @@
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
     <teamengine.version>5.4</teamengine.version>
     <soapui.teamengine.endpoint>http://localhost:8081/teamengine</soapui.teamengine.endpoint>
+    <soapui.teamengine.user>ogctest</soapui.teamengine.user>
+    <soapui.teamengine.password>ogctest</soapui.teamengine.password>
     <soapui.iut>http://cite.deegree.org/deegree-webservices-3.4.16/services/wmts100?service=WMTS&amp;request=GetCapabilities</soapui.iut>
     <soapui.tests.passed>32</soapui.tests.passed>
     <soapui.tests.skipped>0</soapui.tests.skipped>
@@ -284,6 +286,8 @@
               <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
               <projectProperties>
                 <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
+                <value>teamengine.user=${soapui.teamengine.user}</value>
+                <value>teamengine.password=${soapui.teamengine.password}</value>
                 <value>iut=${soapui.iut}</value>
                 <value>tests.passed=${soapui.tests.passed}</value>
                 <value>tests.skipped=${soapui.tests.skipped}</value>
