--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ets-wmts10</artifactId>
   <groupId>org.opengis.cite</groupId>
@@ -8,7 +9,7 @@
 
   <name>OGC Web Map Tile Service 1.0.0 - Executable Test Suite</name>
   <description>
-  Verifies conformance of implementations to OGC Web Map Tile Service 1.0.0.
+    Verifies conformance of implementations to OGC Web Map Tile Service 1.0.0.
   </description>
   <url>https://github.com/opengeospatial/ets-wmts10</url>
   <licenses>
@@ -69,7 +70,7 @@
     <soapui.tests.skipped>20</soapui.tests.skipped>
     <soapui.tests.failed>0</soapui.tests.failed>
     <docker.teamengine.version>5.7</docker.teamengine.version>
-  </properties>  
+  </properties>
   <reporting>
     <plugins>
       <plugin>
@@ -84,10 +85,10 @@
             </reports>
           </reportSet>
         </reportSets>
-      </plugin>  
+      </plugin>
     </plugins>
-  </reporting> 
-  
+  </reporting>
+
   <dependencies>
     <dependency>
       <groupId>org.opengis.cite.teamengine</groupId>
@@ -108,7 +109,7 @@
   </dependencies>
 
   <build>
-    <plugins>  
+    <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -175,7 +176,7 @@
           <releaseProfiles>release</releaseProfiles>
         </configuration>
       </plugin>
-      <plugin>     
+      <plugin>
         <artifactId>maven-site-plugin</artifactId>
         <version>3.4</version>
         <configuration>
@@ -219,116 +220,116 @@
     </plugins>
     <pluginManagement>
       <plugins>
-         <plugin>
-             <groupId>io.fabric8</groupId>
-             <artifactId>docker-maven-plugin</artifactId>
-             <version>0.28.0</version>
-             <configuration>
-               <images>
-                 <image>
-                   <name>ogccite/${project.artifactId}</name>
-                   <build>
-                     <dockerFileDir>${project.basedir}/src/docker</dockerFileDir>
-                     <tags>
-                       <tag>${project.version}-teamengine-${docker.teamengine.version}</tag>
-                     </tags>
-                     <assembly>
-                       <inline>
-                         <fileSets>
-                           <fileSet>
-                             <directory>${project.build.directory}</directory>
-                             <outputDirectory>.</outputDirectory>
-                             <includes>
-                               <include>dependency/*teamengine-*.war</include>
-                               <include>dependency/*teamengine-*.zip</include>
-                               <include>*ets-*.zip</include>
-                             </includes>
-                           </fileSet>
-                         </fileSets>
-                       </inline>
-                     </assembly>
-                   </build>
-                   <run>
-                     <ports>
-                       <port>8081:8080</port>
-                     </ports>
-                     <wait>
-                       <http>
-                         <url>http://localhost:8081/teamengine</url>
-                       </http>
-                       <time>120000</time>
-                     </wait>
-                   </run>
-                 </image>
-               </images>
-             </configuration>
-           </plugin>
-           <plugin>
-             <artifactId>maven-dependency-plugin</artifactId>
-             <version>3.0.0</version>
-             <configuration>
-               <artifactItems>
-                 <artifactItem>
-                   <groupId>org.opengis.cite.teamengine</groupId>
-                   <artifactId>teamengine-web</artifactId>
-                   <version>${docker.teamengine.version}</version>
-                   <type>war</type>
-                 </artifactItem>
-                 <artifactItem>
-                   <groupId>org.opengis.cite.teamengine</groupId>
-                   <artifactId>teamengine-web</artifactId>
-                   <version>${docker.teamengine.version}</version>
-                   <classifier>common-libs</classifier>
-                   <type>zip</type>
-                 </artifactItem>
-                 <artifactItem>
-                   <groupId>org.opengis.cite.teamengine</groupId>
-                   <artifactId>teamengine-console</artifactId>
-                   <version>${docker.teamengine.version}</version>
-                   <classifier>base</classifier>
-                   <type>zip</type>
-                 </artifactItem>
-               </artifactItems>
-             </configuration>
-           </plugin>
-           <plugin>
-            <groupId>com.smartbear.soapui</groupId>
-            <artifactId>soapui-maven-plugin</artifactId>
-            <version>5.5.0</version>
-            <dependencies>
-              <dependency>
-                <groupId>com.jgoodies</groupId>
-                <artifactId>forms</artifactId>
-                <version>1.0.7</version>
-              </dependency>
-            </dependencies>
-            <configuration>
-              <projectFile>src/test/resources/soapui/ets-wmts10-soapui-project.xml</projectFile>
-              <outputFolder>${project.build.directory}/soapui</outputFolder>
-              <junitReport>true</junitReport>
-              <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
-              <projectProperties>
-                <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
-                <value>teamengine.user=${soapui.teamengine.user}</value>
-                <value>teamengine.password=${soapui.teamengine.password}</value>
-                <value>iut=${soapui.iut}</value>
-                <value>tests.passed=${soapui.tests.passed}</value>
-                <value>tests.skipped=${soapui.tests.skipped}</value>
-                <value>tests.failed=${soapui.tests.failed}</value>
-              </projectProperties>
-            </configuration>
-            <executions>
-              <execution>
-                <phase>integration-test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
+        <plugin>
+          <groupId>io.fabric8</groupId>
+          <artifactId>docker-maven-plugin</artifactId>
+          <version>0.28.0</version>
+          <configuration>
+            <images>
+              <image>
+                <name>ogccite/${project.artifactId}</name>
+                <build>
+                  <dockerFileDir>${project.basedir}/src/docker</dockerFileDir>
+                  <tags>
+                    <tag>${project.version}-teamengine-${docker.teamengine.version}</tag>
+                  </tags>
+                  <assembly>
+                    <inline>
+                      <fileSets>
+                        <fileSet>
+                          <directory>${project.build.directory}</directory>
+                          <outputDirectory>.</outputDirectory>
+                          <includes>
+                            <include>dependency/*teamengine-*.war</include>
+                            <include>dependency/*teamengine-*.zip</include>
+                            <include>*ets-*.zip</include>
+                          </includes>
+                        </fileSet>
+                      </fileSets>
+                    </inline>
+                  </assembly>
+                </build>
+                <run>
+                  <ports>
+                    <port>8081:8080</port>
+                  </ports>
+                  <wait>
+                    <http>
+                      <url>http://localhost:8081/teamengine</url>
+                    </http>
+                    <time>120000</time>
+                  </wait>
+                </run>
+              </image>
+            </images>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.0.0</version>
+          <configuration>
+            <artifactItems>
+              <artifactItem>
+                <groupId>org.opengis.cite.teamengine</groupId>
+                <artifactId>teamengine-web</artifactId>
+                <version>${docker.teamengine.version}</version>
+                <type>war</type>
+              </artifactItem>
+              <artifactItem>
+                <groupId>org.opengis.cite.teamengine</groupId>
+                <artifactId>teamengine-web</artifactId>
+                <version>${docker.teamengine.version}</version>
+                <classifier>common-libs</classifier>
+                <type>zip</type>
+              </artifactItem>
+              <artifactItem>
+                <groupId>org.opengis.cite.teamengine</groupId>
+                <artifactId>teamengine-console</artifactId>
+                <version>${docker.teamengine.version}</version>
+                <classifier>base</classifier>
+                <type>zip</type>
+              </artifactItem>
+            </artifactItems>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>com.smartbear.soapui</groupId>
+          <artifactId>soapui-maven-plugin</artifactId>
+          <version>5.5.0</version>
+          <dependencies>
+            <dependency>
+              <groupId>com.jgoodies</groupId>
+              <artifactId>forms</artifactId>
+              <version>1.0.7</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <projectFile>src/test/resources/soapui/ets-wmts10-soapui-project.xml</projectFile>
+            <outputFolder>${project.build.directory}/soapui</outputFolder>
+            <junitReport>true</junitReport>
+            <testFailIgnore>${soapui.test.fail.ignore}</testFailIgnore>
+            <projectProperties>
+              <value>teamengine.endpoint=${soapui.teamengine.endpoint}</value>
+              <value>teamengine.user=${soapui.teamengine.user}</value>
+              <value>teamengine.password=${soapui.teamengine.password}</value>
+              <value>iut=${soapui.iut}</value>
+              <value>tests.passed=${soapui.tests.passed}</value>
+              <value>tests.skipped=${soapui.tests.skipped}</value>
+              <value>tests.failed=${soapui.tests.failed}</value>
+            </projectProperties>
+          </configuration>
+          <executions>
+            <execution>
+              <phase>integration-test</phase>
+              <goals>
+                <goal>test</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
     </pluginManagement>
-    
+
     <resources>
       <resource>
         <directory>${basedir}/src/main/resources</directory>
@@ -461,13 +462,13 @@
     </profile>
   </profiles>
 
-   <pluginRepositories>
-      <pluginRepository>
-         <id>smartbear-sweden-plugin-repository</id>
-         <url>http://www.soapui.org/repository/maven2/</url>
-      </pluginRepository>
-   </pluginRepositories>
-  
+  <pluginRepositories>
+    <pluginRepository>
+      <id>smartbear-sweden-plugin-repository</id>
+      <url>http://www.soapui.org/repository/maven2/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <distributionManagement>
     <site>
       <id>site</id>
