--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -1,4 +1,6 @@
-FROM tomcat:7.0-jre8
+FROM tomcat:10.1-jre17
+
+RUN apt update && apt install -y unzip
 
 # add TEAM engine webapp
 ADD maven/dependency/teamengine-web-*.war /root/
@@ -20,6 +22,9 @@ ADD maven/ets-wmts10-*-ctl.zip /root/
 RUN cd /root/ && unzip -q ets-wmts10-*-ctl.zip -d /root/te_base/scripts
 ADD maven/ets-wmts10-*-deps.zip /root/
 RUN cd /root/ && unzip -q -o ets-wmts10-*-deps.zip -d /usr/local/tomcat/webapps/teamengine/WEB-INF/lib
+
+RUN rm -R /root/te_base/scripts/note
+
 
 # run tomcat
 CMD ["catalina.sh", "run"]
